--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "deployDemo": 
+      "git subtree push --prefix dist origin gh-pages"
   },
   "author": "",
   "license": "ISC",
