--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-md5-hash": "^0.0.6"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2"
